# benchmarks_cnn_api

./: .stestr.conf  Jenkinsfile  LICENSE  README.md  pull-tf_benchmarks.sh  pull-tf_cnn_benchmarks.sh  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
benchmarks_api/: config.py
benchmarks_api/dataset/: make_dataset.py
benchmarks_api/features/: build_features.py
benchmarks_api/models/: README.md  benchmark_cnn.py  deepaas_api.py
benchmarks_api/tests/: test_unit_model.py
benchmarks_api/visualization/: visualize.py
benchmarks_cnn_api/: config.py
benchmarks_cnn_api/dataset/: make_dataset.py
benchmarks_cnn_api/features/: build_features.py
benchmarks_cnn_api/models/: deep_api.py  model_utils.py  train_pro.py  train_synth_or_data.py
benchmarks_cnn_api/tests/: test_api.py  test_func_model.py  test_unit_model.py
benchmarks_cnn_api/visualization/: visualize.py
docker/: Dockerfile.dev
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-benchmarks_api_start.py2.ipynb
patches/: official_logger_1.13.patch  official_logger_1.patch  official_logger_2.1.patch  official_logger_2.patch  tf_cnn_benchmarks_1.10.patch  tf_cnn_benchmarks_1.14.patch  tf_cnn_benchmarks_1.15.patch  tf_cnn_benchmarks_1.patch  tf_cnn_benchmarks_2.1.patch  tf_cnn_benchmarks_2.patch
