[metadata]
name = benchmarks_api
summary = tf_cnn_benchmarks packed with DEEPaaS API
description-file =
    README.md
author = A.Grupp, V.Kozlov (KIT)
author-email = valentin.kozlov@kit.edu
version = 0.1.0
license = MIT
home-page = https://git.scc.kit.edu/deep/benchmarks_api
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5


[files]
packages =
    benchmarks_api

[entry_points]

deepaas.model = 
    benchmarks_api = benchmarks_api.models.deepaas_api

